updated css and html files

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <title>Note App</title>
 </head>
 <body>
-    <div class="notes-container">
-        <div class="notes__sidebar">
+    <div class="notes-container" id="app">
+        <!-- <div class="notes__sidebar">
             <div class="notes__button">
                 <button class="notes__add">Add Note</button>
             </div>
             <div class="notes__preview">
                 <input type="text" class="notes__title" placeholder="Type note title...">
-                <textarea class="notes__text" placeholder="Type note text..."></textarea>
+                <textarea class="notes__body" placeholder="Type note text..."></textarea>
             </div>
         </div>
         <div class="notes__list">
@@ -34,7 +34,7 @@
                     <i class="fas fa-trash-alt fa-lg"></i>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
     <script src="/js/main.js" type="module"></script>
 </body>
